--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,7 +1,7 @@
 
 .Home{
     height: 200vh;
-    background-image: url("../assets//home.png");
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/pratitya-6b78c.appspot.com/o/home.png?alt=media&token=2f09a97d-4b55-4b15-8b90-c4d8011a5673");
     background-size: cover;
 }
 
@@ -24,14 +24,32 @@
     padding: 50px;
     background-color: lightblue;
     height: 100vh;
-    background-color: #08011e;
+    background-color: #000009;
 }
 
 .r2-head,.r3-head{
     display: flex;
     align-items: center;
     height: 100px;
-    justify-content: end;
+    justify-content: center;
     padding-right: 80px;
     font-size: 70px;
+}
+
+
+@media (max-width: 600px) {
+    .r1{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .Home{
+        background-color: #000009;
+        background-image: url("../assets/home-small.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
 }
