--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,16 +11,16 @@
 
 .logo-class {
     position: absolute;
-    left: 45%;
+    left: 46%;
 }
 
 .Navbar .logo{
-    width: 70px;
+    width: 100px;
     transition: all 250ms;
 }
 .logo:hover{
     cursor: pointer;
-    width: 80px;
+    width: 120px;
 }
 
 .nav-links {
@@ -30,7 +30,7 @@
     gap: 20px;
 }
 
-.nav-links p {
+.nav-links p,.nav-links a {
     color: #fff;
     text-decoration: none;
     padding: 10px 15px;
@@ -45,4 +45,38 @@
 .nav-links p:hover{
     cursor: pointer;
     font-size: 35px;
+}
+.ham{
+    display: none;
+}
+
+@media (max-width: 600px) {
+    .Navbar{
+        justify-content: space-between;
+    }
+    .logo-class{
+        left: 37%;
+    }
+    .nav-links {
+        display: none;
+    }
+    .ham{
+        display: block;
+    }
+    .hidden-menu{
+        position: absolute;
+        left: 0;
+        top: 90px;
+        width: 95%;
+        display: flex;
+        flex-direction: column;
+        background-color: rgba(255,255,255,0.3);
+        padding-left: 20px;
+    }
+    .hidden-menu p{
+        font-size: 30px;
+        font-family: arab;
+        color: #E9C79A;
+        line-height: 60px;
+    }
 }
