--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -50,12 +50,12 @@ body{
     width: 100%;
 }
 .r2-text{
-    /* font-family: sans-serif; */
+    font-family: sans-serif;
     width: 30vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 30px;
+    font-size: 22px;
     text-align: center;
 }
 .r2-carousel{
@@ -90,7 +90,7 @@ body{
     }
     .r2-text{
         width: 100%;
-        font-size: 25px;
+        font-size: 20px;
     }
     .r2-content{
         align-items: center;
